# if2kv2

./: Doxyfile  README.md  mketags.sh  version.txt
autobuild/: doxygen.sh
autobuild/macosx-universal/: build.sh  clean.sh  install-dev-docs.sh  install.sh
if2k-files/: MagicMakefile  m
if2k-files/db/: 01badphr.txt  01goodurl.txt  02badurl.txt  03badphr.txt  03badurl.txt  04badphr.txt  04badurl.txt  05badurl.txt  06badurl.txt  07badurl.txt  08badurl.txt
if2k-files/license/: demo.txt  demoonly.txt  demoserver.txt
if2k-files/misc/: if2k-icon.icns  if2k-icon.tiff
if2k-files/web/: block.html  connectionerror.html  error404.html  index.html  login.html  logout.html
if2k/platform/posix/if2k/src/: Makefile.am  main.c
libif2k/include/: if2k_mini_client.h  if2k_mini_compile.h  if2k_mini_config.h  if2k_mini_http_proxy.h  if2k_mini_kernel.h  if2k_mini_kernel_v2.h  if2k_mini_log.h  if2k_mini_nntp_proxy.h  if2k_mini_scanner.h  if2k_mini_server.h  if2k_mini_tree.h  if2k_mini_tunnel.h  if2k_pattern_expander.h  if2kkernel_internal.h
libif2k/old/: if2k_admin.cpp  if2k_admin.h  if2k_admin_file.h  if2k_admin_textedit.cpp  if2k_admin_textedit.h  if2k_client.cpp  if2k_client.h  if2k_client_settings.cpp  if2k_compile_list.cpp  if2k_config.h  if2k_create_license.cpp  if2k_decrypt.cpp  if2k_extract_links.cpp  if2k_filter.cpp  if2k_filter.h  if2k_httpproxy.cpp  if2k_httpproxy.h  if2k_kernel.cpp  if2k_kernel.h  if2k_logger.cpp  if2k_logger.h  if2k_lua.cpp  if2k_lua.h  if2k_lua_kernel.cpp  if2k_lua_kernel.h  if2k_lua_scanner.cpp  if2k_lua_scanner.h  (+37 more)
libjdk/: MagicMakefile  m
(+473 files in other folders)
